# project-nexus-core

./: .env.example  .gitignore  LICENSE  NEXT_STEPS_ROADMAP.md  PHASE_3_PRODUCT_EXCELLENCE_ROADMAP.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
app/: app.py  main.py  state.py  theme.py
app/components/: charts.py
app/pages/: anomaly_deepdive.py  columns.py  downloads.py  entities.py  executive_summary.py  sidebar.py
docs/: LEADGEN_ARCHITECTURE.md  TECHNICAL_INITIALIZATION_PLAN.md
docs/adr/: 001-llm-in-etl-pipeline.md
docs/strategy/: doc1_technical_architecture.md  doc2_gtm_strategy.md  doc3_legal_equity.md  doc4_execution_plan.md
infra/docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
infra/docker/nginx/: nginx.conf
scripts/generators/: generate_messy_logistics.py
scripts/leadgen/: README.md  __init__.py  cli.py  exceptions.py  io.py  lead_generator.py  models.py  normalize.py  process_leads.py  process_leads.py.bak  requirements.txt  sabi.py  scoring.py  validator.py  verify.py
site/: index.html
src/common/config/: settings.py
src/common/exceptions/: __init__.py
src/common/logging/: __init__.py
src/db/: __init__.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0ebec1c4613f_initial_schema.py
src/db/repositories/: __init__.py  audit_repo.py  base.py  client_repo.py
src/etl/profilers/: excel_profiler.py
src/services/: audit_service.py  demo_service.py  export_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_alembic_migrations.py  test_audit_deduplication.py  test_audit_pipeline.py  test_placeholder.py
tests/smoke/: test_dashboard_renders.py
tests/unit/etl/: test_excel_profiler.py  test_generate_messy_logistics.py  test_profiling_report_contract.py
tests/unit/leadgen/: test_cli.py  test_models.py  test_normalize.py  test_sabi.py  test_scoring.py  test_validator.py  test_verify.py
tests/unit/services/: test_audit_service.py  test_demo_service.py  test_export_service.py
